add new api for kcp005

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/kcp/005/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/kcp/005/index.xhtml
@@ -379,6 +379,10 @@
 										</td>
 									</tr>
 									<tr>
+										<td>$('#sample-component').ntsListComponentApi("getSelectedRecords");</td>
+										<td><i>Description:</i> Get full information in data source of selected rows</td>
+									</tr>
+									<tr>
 										<td>$('#sample-component').getDataList(); <br></br> <br></br>
 											<b>Example:</b><br></br>
 											$('#component-items-list').getDataList();
