update for disable row

--- a/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/components/_treegridview.scss
+++ b/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/components/_treegridview.scss
@@ -22,6 +22,10 @@
 				  	padding-right: 2px !important;
 				}
 			}
+			tr.row-disabled {
+				background-color: #CCC;
+  				color: #333;
+			}
 		}
 	}
 }
