--- a/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/stylesheets/base.css
+++ b/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/stylesheets/base.css
@@ -3036,6 +3036,11 @@ button.nts-switch-button[disabled].selected {
   padding-right: 2px !important;
 }
 
+.ui-igtreegrid .ui-iggrid-table .ui-iggrid-tablebody tr.row-disabled {
+  background-color: #CCC;
+  color: #333;
+}
+
 /* line 32, ../sass/components/_treegridview.scss */
 .no-selector table th:first-child.ui-iggrid-rowselector-class {
   visibility: hidden;
