--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/g/cps003.g.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/g/cps003.g.style.css
@@ -30,7 +30,23 @@
 	margin-left:10px !important;
 }
 
+td[aria-describedby='grid2_empCd']{
+  width: 99%;
+  /* display: inline-block; */
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 td[aria-describedby='grid2_empName']{
+  width: 99%;
+  /* display: inline-block; */
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+td[aria-describedby='grid2_message']{
   width: 99%;
   /* display: inline-block; */
   white-space: nowrap;
