--- a/nts.uk/uk.mobile/ClientApp/views/kaf/s05/components/step1/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/kaf/s05/components/step1/index.html
@@ -97,6 +97,8 @@
                 </button>
             </div>
             <v-errors v-model="$errors.kafs05ModelStep1.workTypeCd" class="d-block mt-0" />
+            <v-errors v-model="$errors.kafs05ModelStep1.workTypeName" class="d-block mt-0" />
+            <v-errors v-model="$errors.kafs05ModelStep1.siftName" class="d-block mt-0" />
         </div>
         <div class="card card-label" v-if="kafs05ModelStep1.displayCaculationTime">
             <div class="card-header">
