CPS013: fix bug #108810

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/013/e/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/013/e/index.xhtml
@@ -63,6 +63,7 @@
 								multiple: false,
 								value: currentCode,
 								showNumbering: false,
+								rowVirtualization: true,
 								rows: 15
 							}"></table>
 					</div>
