--- a/nts.uk/uk.mobile/ClientApp/views/kaf/s05/components/step2/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/kaf/s05/components/step2/index.html
@@ -57,33 +57,33 @@
                         </div>
                         <div class="col-4 display-time"
                             v-if="kafs05ModelStep2.prePostSelected == 1 && !item.preAppExceedState">
-                            <span class="far fa-clock" v-if="item.preAppTime">事前[{{item.preAppTime | timedr}}]</span>
-                            <span class="far fa-clock" v-if="!item.preAppTime">事前[--:--]</span>
+                            <span class="far fa-clock" v-if="null != item.preAppTime">事前[{{item.preAppTime | timedr}}]</span>
+                            <span class="far fa-clock" v-if="null == item.preAppTime">事前[--:--]</span>
                         </div>
                         <div class="col-4 display-time-exceed"
                             v-if="kafs05ModelStep2.prePostSelected == 1 && item.preAppExceedState">
-                            <span class="far fa-clock" v-if="item.preAppTime">事前[{{item.preAppTime | timedr}}]</span>
-                            <span class="far fa-clock" v-if="!item.preAppTime">事前[--:--]</span>
+                            <span class="far fa-clock" v-if="null != item.preAppTime">事前[{{item.preAppTime | timedr}}]</span>
+                            <span class="far fa-clock" v-if="null == item.preAppTime">事前[--:--]</span>
                         </div>
                         <div class="col-4 display-time"
                             v-if="kafs05ModelStep2.prePostSelected == 1 && !item.actualExceedState">
                             <span class="far fa-clock"
-                                v-if="item.caculationTime">実績[{{item.caculationTime | timedr}}]</span>
-                            <span class="far fa-clock" v-if="!item.caculationTime">実績[--:--]</span>
+                                v-if="null != item.caculationTime">実績[{{item.caculationTime | timedr}}]</span>
+                            <span class="far fa-clock" v-if="null == item.caculationTime">実績[--:--]</span>
                         </div>
                         <div class="col-4 display-time-exceed"
                             v-if="kafs05ModelStep2.prePostSelected == 1 && item.actualExceedState">
                             <span class="far fa-clock"
-                                v-if="item.caculationTime">実績[{{item.caculationTime | timedr}}]</span>
-                            <span class="far fa-clock" v-if="!item.caculationTime">実績[--:--]</span>
+                                v-if="null != item.caculationTime">実績[{{item.caculationTime | timedr}}]</span>
+                            <span class="far fa-clock" v-if="null == item.caculationTime">実績[--:--]</span>
                         </div>
                     </div>
                     <nts-time-editor time-input-type="time-duration" v-model="item.applicationTime"
                         v-bind:disabled="!kafs05ModelStep2.enableOvertimeInput" 
                         v-bind:errors="$errors.kafs05ModelStep2.overtimeHours"
                         v-bind:show-error="false"/>
-                    <div class="invalid-feedback mt-1 d-block mt-0 mb-2" v-if="item.preAppExceedState"><span>{{ 'Msg_1561' | i18n($dt(kafs05ModelStep2.appDate)) }}</span></div>
-                    <div class="invalid-feedback mt-1 d-block mt-0 mb-2" v-if="kafs05ModelStep2.actualStatus == 1 && item.actualExceedState"><span>{{ 'Msg_1560' | i18n($dt(kafs05ModelStep2.appDate)) }}</span></div>
+                    <div class="invalid-feedback mt-1 d-block mt-0 mb-2" v-if="item.preAppExceedState"><span>{{ 'Msg_1561' | i18n(item.frameName) }}</span></div>
+                    <div class="invalid-feedback mt-1 d-block mt-0 mb-2" v-if="kafs05ModelStep2.actualStatus == 1 && item.actualExceedState"><span>{{ 'Msg_1560' | i18n(item.frameName) }}</span></div>
                 </div>
             </div>
         </div>
@@ -100,14 +100,14 @@
                         </div>
                         <div class="col-4 display-time"
                             v-if="kafs05ModelStep2.prePostSelected == 1 && !item.preAppExceedState">
-                            <span class="far fa-clock" v-if="item.preAppTime">事前[{{item.preAppTime | timedr}}]</span>
-                            <span class="far fa-clock" v-if="!item.preAppTime">事前[--:--]</span>
+                            <span class="far fa-clock" v-if="null != item.preAppTime">事前[{{item.preAppTime | timedr}}]</span>
+                            <span class="far fa-clock" v-if="null == item.preAppTime">事前[--:--]</span>
                         </div>
 
                         <div class="col-4 display-time-exceed"
                             v-if="kafs05ModelStep2.prePostSelected == 1 && item.preAppExceedState">
-                            <span class="far fa-clock" v-if="item.preAppTime">事前[{{item.preAppTime | timedr}}]</span>
-                            <span class="far fa-clock" v-if="!item.preAppTime">事前[--:--]</span>
+                            <span class="far fa-clock" v-if="null != item.preAppTime">事前[{{item.preAppTime | timedr}}]</span>
+                            <span class="far fa-clock" v-if="null == item.preAppTime">事前[--:--]</span>
                         </div>
                     </div>
                     <nts-time-editor v-model="item.applicationTime" time-input-type="time-duration" />
