--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/005/cm/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/005/cm/index.xhtml
@@ -649,19 +649,20 @@
 			<label style ="margin-left: 72px" data-bind="text : workClockFrom2To2Reference"></label>
 			</div>
 			<div class="control-group" data-bind ="foreach: overtimeHoursReference">
+				<div class="control-group">
 					<!--A11_16-->
 					<label  data-bind="text : frameName"></label>
 					<!--A11_17-->
 					<label data-bind="text : applicationTime"></label>
-					<BR />
+				</div>
 			</div>
-			<div class="control-group">
+			<div class="control-group" data-bind="if: appOvertimeNightFlg">
 			<!--A11_24申請者-->
 			<label>#{i18n.getText('KAF005_109')} :</label>
 			<!--A11_25 申請者表示氏名-->
 			<label data-bind="text : overTimeShiftNightRefer"></label>
 			</div>
-			<div class="control-group">
+			<div class="control-group" data-bind="if: flexFLag">
 			<!--A11_26 申請者-->
 			<label>#{i18n.getText('KAF005_110')} :</label>
 			<!--A11_27 申請者表示氏名-->
@@ -724,13 +725,13 @@
 						<label data-bind="text : applicationTime"></label>
 						<BR />
 						</div>
-						<div class="control-group">
+						<div class="control-group" data-bind="if: appOvertimeNightFlg">
 						<!--A12_24-->
 						<label>#{i18n.getText('KAF005_131')} :</label>
 						<!--A12_25-->
 						<label data-bind="text : overTimeShiftNightPre"></label>
 						</div>
-						<div class="control-group">
+						<div class="control-group" data-bind="if: flexFLag">
 						<!--A12_26-->
 						<label>#{i18n.getText('KAF005_132')} :</label>
 						<!--A12_27-->
