--- a/nts.uk/uk.mobile/ClientApp/views/kaf/s05/components/step1/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/kaf/s05/components/step1/index.html
@@ -28,6 +28,10 @@
             </div>
         </div>
     </div>
+    <div v-if="kafs05ModelStep1.actualStatus == 3 && kafs05ModelStep1.performanceExcessAtr == 2" class="border border-danger rounded p-1 mt-2 error-message" role="alert">
+        <fa-font icon="exclamation-circle" class="text-danger m-2" />
+        <div>{{ 'Msg_1556' | i18n($dt(kafs05ModelStep1.appDate)) }}</div>
+    </div>
     <div class="input-container">
         <div class="card card-label" v-if="!kafs05ModelStep1.isCreate">
             <div class="card-header">
