--- a/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/017/a/jmm017.a.style.css
+++ b/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/017/a/jmm017.a.style.css
@@ -1,3 +1,3 @@
-.tab1 {margin: 50px; width: 500px;}
+.tab1 {width: 500px;}
 .tab1 .settings{margin: 15px;}
 .tab1 .settings .lableRequired{width: 200px;}
