JMM018: update code UI

--- a/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/018/b/index.xhtml
+++ b/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/018/b/index.xhtml
@@ -10,7 +10,7 @@
 		<div class="sidebar-content-header">
 			<span class="title">#{i18n.getText('JMM018_A1_2')}</span>
 			<button tabindex="1" class="proceed"
-				data-bind="click: saveSysResourceSetting">#{i18n.getText('JMM018_A3_2')}</button>
+				data-bind="click: saveEventMenu">#{i18n.getText('JMM018_A3_2')}</button>
 		</div>
 
 		<div class="contents-area">
