--- a/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/018/b/jmm018.b.style.css
+++ b/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/018/b/jmm018.b.style.css
@@ -23,7 +23,7 @@
 	overflow: visible;
 }
 
-#nodeText{
+/* #nodeText{
 	margin-left: 125px;
 }
 
@@ -37,5 +37,5 @@
 
 #useApproval{
 	margin-left: 30px;
-}
+} */
     
