--- a/nts.uk/uk.mobile/ClientApp/views/kaf/s05/components/step3/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/kaf/s05/components/step3/index.html
@@ -170,7 +170,7 @@
                         <div class="col-4" v-show="item.preAppExceedState">
                             <span class="far fa-clock display-time-exceed"
                                 v-if="null != item.preAppTime">事前[{{item.preAppTime | timedr}}]</span>
-                            <span class="far fa-clock display-time" v-if="null == item.preAppTime">事前[--:--]</span>
+                            <span class="far fa-clock display-time-exceed" v-if="null == item.preAppTime">事前[--:--]</span>
                         </div>
                         <div class="col-8" v-show="!item.actualExceedState">
                             <span class="far fa-clock display-time"
@@ -180,7 +180,7 @@
                         <div class="col-8" v-show="item.actualExceedState">
                             <span class="far fa-clock display-time-exceed"
                                 v-if="null != item.caculationTime">実績[{{item.caculationTime | timedr}}]</span>
-                            <span class="far fa-clock display-time" v-if="null == item.caculationTime">実績[--:--]</span>
+                            <span class="far fa-clock display-time-exceed" v-if="null == item.caculationTime">実績[--:--]</span>
                         </div>
                     </div>
                 </div>
