--- a/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/017/c/index.xhtml
+++ b/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/017/c/index.xhtml
@@ -28,13 +28,13 @@
 					</div>
 					<div class="settings">
 						<div data-bind="ntsFormLabel: {required: true}" class ="lableRequired">#{i18n.getText('JMM017_C222_2')}</div>
-						<div tabindex="1" id="target" data-bind="ntsCheckBox: { checked: usageFlgByScreen }">#{i18n.getText('JMM017_C222_3')}</div>
+						<div tabindex="4" data-bind="ntsCheckBox: { checked: usageFlgByScreen }">#{i18n.getText('JMM017_C222_3')}</div>
 					</div>
 					<div class="settings">
 						<div data-bind="ntsFormLabel: {required: true}" class ="lableRequired">#{i18n.getText('JMM017_C222_4')}</div>
 					</div>
 					<div class="settings">
-						<textarea class="inputTextarea" data-bind="ntsMultilineEditor: { 
+						<textarea tabindex="1" class="inputTextarea" data-bind="ntsMultilineEditor: { 
 							value: guideMsgText,  
 							constraint: 'String_Any_100', 
 							name: '#{i18n.getText('JMM017_C222_5')}', 
@@ -46,8 +46,8 @@
 				</div>
 			</div>
 			<div id="functions-area-bottom">
-				<button class="proceed x-large" data-bind="click: decide, enable: $root.errors.isEmpty()">#{i18n.getText('JMM017_C3_1')}</button>
-				<button data-bind="click: cancel" id="cancel">#{i18n.getText('JMM017_C3_2')}</button>
+				<button tabindex="2" class="proceed x-large" data-bind="click: decide, enable: $root.errors.isEmpty()">#{i18n.getText('JMM017_C3_1')}</button>
+				<button tabindex="3" data-bind="click: cancel" id="cancel">#{i18n.getText('JMM017_C3_2')}</button>
 			</div>
 		</ui:define>
 	</ui:composition>
