--- a/nts.uk/uk.mobile/ClientApp/views/kaf/s05/components/step2/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/kaf/s05/components/step2/index.html
@@ -37,6 +37,10 @@
             <fa-font icon="exclamation-triangle" class="text-danger m-2" />
             <div>{{ 'Msg_1556' | i18n($dt(kafs05ModelStep2.appDate)) }}</div>
         </div>
+        <div v-if="kafs05ModelStep2.actualStatus == 1 && hasActualError && kafs05ModelStep2.performanceExcessAtr == 2" class="border border-danger rounded p-1 mt-2 error-message" role="alert">
+            <fa-font icon="exclamation-circle" class="text-danger m-2" />
+            <div>{{ 'Msg_1558' | i18n }}</div>
+        </div>
     </div>
     <div class="input-container">
         <div class="card card-label">
