--- a/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/018/b/index.xhtml
+++ b/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/018/b/index.xhtml
@@ -15,10 +15,14 @@
 
 		<div class="contents-area">
 			<div class = "ignite-grid">
+				<div id = "button">
+					<button id="buttonExpandAll" data-bind="click: saveEventMenu">#{i18n.getText('JMM018_A422_2')}</button>
+					<button id="buttonCollapseAll" data-bind="click: saveEventMenu">#{i18n.getText('JMM018_A422_3')}</button>
+				</div>
 				<div id = "list-table">
 					<table id="treegrid"
 								data-bind="ntsTreeGridView:{
-										width: 800,
+										width: 1700,
 										height: 500,
 										dataSource: listEventId,
 										value: itemSelected,
